--- a/FTAGN.extension/code/popup.html
+++ b/FTAGN.extension/code/popup.html
@@ -12,5 +12,11 @@
 </head>
 
 <body style="background-color:darkgrey">
+f'TAG'n!<br>
+	<form action="insert.php" method="post">
+		URL: <input type="text" name="URL" /><br>
+		Tag: <input type="text" name="1stTag" /><br><br>
+		<input type="submit" />
+	</form>
 </body>
 </html>
