add some url to form code
Still not working :

--- a/FTAGN.extension/code/popup.html
+++ b/FTAGN.extension/code/popup.html
@@ -14,8 +14,15 @@
 <body style="background-color:darkgrey">
 f'TAG'n!<br>
 	<form action="insert.php" method="post">
+		<chrome.tabs.query({active: true, currentWindow: true}, function(arrayOfTabs)
+		{	
+			var activeTab = arrayOfTabs[0];
+			var activeTabId = activeTab.id;
+		});>
+				
+		Auto URL: <input type="text" name="AURL" value="url here" /><br>		
 		URL: <input type="text" name="URL" /><br>
-		Tag: <input type="text" name="1stTag" /><br><br>
+		Tag: <input type="text" name="1stTag" /><br>
 		<input type="submit" />
 	</form>
 </body>
